--- a/prop-64-analysis.ipynb
+++ b/prop-64-analysis.ipynb
@@ -14,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "props = pd.read_csv(\"http://www.firstpythonnotebook.org/_static/committees.csv\")"
@@ -1195,7 +1197,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contribs = pd.read_csv(\"http://www.firstpythonnotebook.org/_static/contributions.csv\")"
@@ -1597,7 +1601,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "prop = props[props.prop_name == \"PROPOSITION 064- MARIJUANA LEGALIZATION. INITIATIVE STATUTE.\"]"
@@ -1804,7 +1810,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "merged = pd.merge(prop, contribs, on=\"calaccess_committee_id\")"
