Added markdown to notebook.

--- a/prop-64-analysis.ipynb
+++ b/prop-64-analysis.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# My First Notebook\n",
+    "\n",
+    "This is my first Python notebook in Jupyter."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -9,6 +18,13 @@
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'm reading in the list of propositions and committees in CSV."
    ]
   },
   {
@@ -1192,6 +1208,13 @@
    ],
    "source": [
     "props.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read in the list of contributions to ballot measures."
    ]
   },
   {
