--- a/prop-64-analysis.ipynb
+++ b/prop-64-analysis.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# My First Notebook\n",
+    "# Prop 64 Analysis\n",
     "\n",
-    "This is my first Python notebook in Jupyter."
+    "This is my first Python notebook in Jupyter. I created it using Ben Welsh's tutorial"
    ]
   },
   {
